WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214697
[Cocoa] RELEASE_ASSERT when calling registerSupplementalVP9Decoder() when VideoToolbox.framework is not present
https://bugs.webkit.org/show_bug.cgi?id=214697
Summary
[Cocoa] RELEASE_ASSERT when calling registerSupplementalVP9Decoder() when Vid...
Jer Noble
Reported
2020-07-23 14:04:02 PDT
[Cocoa] RELEASE_ASSERT when calling registerSupplementalVP9Decoder() when VideoToolbox.framework is not present
Attachments
Patch
(1.73 KB, patch)
2020-07-23 14:06 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-07-23 14:04:33 PDT
<
rdar://problem/66010949
>
Jer Noble
Comment 2
2020-07-23 14:06:05 PDT
Created
attachment 405074
[details]
Patch
EWS
Comment 3
2020-07-23 14:41:15 PDT
Committed
r264791
: <
https://trac.webkit.org/changeset/264791
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405074
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug