Cherry-pick r264791. rdar://problem/66014800

[Cocoa] RELEASE_ASSERT when calling registerSupplementalVP9Decoder() when VideoToolbox.framework is not present
    https://bugs.webkit.org/show_bug.cgi?id=214697
    <rdar://problem/66010949>

    Reviewed by Eric Carlson.

    * platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
    (WebCore::registerSupplementalVP9Decoder):
    (WebCore::isVP9DecoderAvailable):

    Canonical link: https://commits.webkit.org/227522@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264791 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/227349.12@safari-610.1.23.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.23.1-branch@264792 268f45cc-cd09-0410-ab3c-d52691b4dbfc